<resources>
    <string name="app_name">Sergeev Alexey - Workout Shop</string>
    <string name="about_store">О Магазине WORKOUT</string>
    <string name="about_store_content">В феврале 2011 года мы начали продавать футболки для того,
        чтобы получить средства на развитие проекта WorkOut: фитнес городских улиц.
        С тех пор прошло уже более 6 лет, и за это время нам удалось стать одним из
        ведущих российских производителей инвентаря для тренировок дома, на улице и в спортивном зале.
    </string>
    <string name="tell_about_us">Про нас рассказывают:</string>
    <string name="the_best_inventory">Лучший спортивный инвентарь для тренировок дома и на улице!</string>
    <string name="action_main_page">Главная страница</string>
    <string name="action_katalog">Каталог</string>
    <string name="action_delivery">Доставка</string>
    <string name="action_payment">Оплата</string>
    <string name="action_shop_in_moscow">Магазин в Москве</string>
    <string name="action_contacts">Контакты</string>
    <string name="action_basket">Корзина</string>
    <string name="contacts">Адреса и телефоны</string>
    <string name="address">Наименование, адрес, телефон</string>
    <string name="store_hours">Часы работы</string>
    <string name="store1_address">1) Розничный магазин\"ВОРКАУТ\"
        \nг. Москва, ул. Балтийская, д. 5,
        \nТорговая галерея \"Москва-Сокол\" (1 этаж) м. Сокол
        \n+7 (925) 102 0585</string>
    <string name="store2_address">2) Офис и склад
        \nг. Москва, ул. Нарвская, д. 2, стр. 3 (2 этаж)
        \nм. Водный стадион
        \n+7 (499) 703 0585</string>
    <string name="store3_address">3) Информационно-справочная служба
        \nsupport@workoutshop.ru
        \n+7 (499) 703 0585</string>
    <string name="store4_address">4) Прием заказов по телефону
        \nsupport@workoutshop.ru
        \n+7 (499) 703 0585</string>
    <string name="store5_address">5) Почтовый адрес
        \nИП Кучумов Дмитрий Юрьевич
        \n125475, г. Москва, ул. Зеленоградская, д. 31</string>
    <string name="store1_hours">ПН-ВС 11:00 - 20:00</string>
    <string name="store4_hours">ПН-ВС 10:00 - 22:00</string>
    <string name="store2_3_5_hours">ПН-ВС 10:00 - 19:00</string>
    <string name="shop_in_moscow_address">Адреc</string>
    <string name="metro_station">Станция метро</string>
    <string name="phone_number">Телефон</string>
    <string name="email">Email</string>
    <string name="shop_in_moscow_address_name">
        Магазин WORKOUT, г. Москва, ул. Балтийская, д. 5, ТЦ \"Москва-Сокол\", 1 этаж
    </string>
    <string name="metro_station_name">Сокол</string>
    <string name="phone_number_name">89251020585</string>
    <string name="email_name">info@workoutshop.ru</string>
    <string name="our_website">Наш сайт</string>
    <string name="our_website_name">workoutshop.ru</string>
    <string name="attention_order">Внимание: При покупке товаров в розничном магазине делать заказ на сайте НЕ ТРЕБУЕТСЯ.</string>
    <string name="how_come_by_public_transport">КАК ПРОЕХАТЬ НА ОБЩЕСТВЕННОМ ТРАНСПОРТЕ</string>
    <string name="how_come_by_car">КАК ПРОЕХАТЬ НА АВТОМОБИЛЕ</string>
    <string name="how_come_by_public_transport_full_text">
        От станции метро \"Сокол\" выйдите в сторону Балтийской улицы. Далее пройдите 200 м направо
        от метро до пересечения Ленинградского проспекта и Балтийской улицы.
        Перейдите на другую сторону Балтийской улицы и пройдите по левой стороне улицы до дома №5.
        Войдите в торговую галерею \"Москва-Сокол\" (стеклянные двери под серым козырьком справа от арки).
        Наш магазин находится почти в конце торговой галереи, напротив аквариума.
        Дополнительный ориентир: рядом с нами находится магазин \"Онлайнтрейд.ру\".
    </string>
    <string name="how_come_by_car_full_text">
        По Ленинградскому проспекту из центра двигайтесь мимо метро Сокол держась правой стороны.
        Поверните направо, на Балтийскую улицу. Двигайтесь примерно 500 м до разворота,
        далее развернитесь и вернитесь назад, почти к Ленинградскому проспекту.
        После концертного зала \"СТАДИУМ\" поверните направо, в арку.
        Далее двигайтесь вдоль здания до 2-го подъезда (в середине здания). Войдите во 2-й подъезд.
        Наш магазин расположен первым, справа от входа. Парковка: непосредственно у 2-го подъезда
        количество парковочных мест ограничено, но можно парковаться вокруг всего здания.
    </string>
    <string name="show_shop_on_map">Показать магазин на карте</string>
    <string name="delivery_terms">
        <![CDATA[
        Стоимость доставки зависит от веса заказа и от адреса доставки, и рассчитывается
        автоматически при оформлении заказа. Заказы доставляются по
        <b>России</b>, в
        <b>Беларусь</b> и
        <b>Казахстан</b>.
        <br>
        Заказы весом <b>до 25 кг</b> можно оплатить как при оформлении заказа, так и при его получении.
        Заказы весом <b>25 кг и более</b> или отправка нескольких заказов одновременно оплачиваются
        только предварительно. При необходимости доставки весом <b>25 кг и более</b>
        (при доставке почтой <b>более 20 кг</b>) вы можете разделить заказ на несколько заказов,
        либо выбрать доставку транспортной компанией. Также вы можете самостоятельно заказать доставку
        в удобной для вас транспортной, курьерской или почтовой компании
        (в этом случае при оформлении заказа укажите город Москва и выберите способ доставки "самовывоз").
        <br>
        <b>Также предварительная оплата требуется во всех заказах,
        где стоимость доставки превышает стоимость товаров.</b>
        Заказы на сумму более <b>100 000 рублей</b> доставляются <b>бесплатно</b>, за счет магазина.
        <br>
        Срок хранения заказов на почте, в пунктах выдачи заказов и в пунктах самовывоза - <b>14 дней</b>.
        <br>
        Тарифы на доставку по <b>почте, курьером и через пункты выдачи заказов</b> установлены
        <font color=\'#C53022\'>по тарифным зонам. Подробнее на сайте: </font>
        ]]>
    </string>
    <string name="delivery_by_messenger">
        <![CDATA[
        Курьерская доставка производится <font color=\'#C53022\'>курьерской компанией СДЭК</font>
        во все крупные города России. Доставка осуществляется в пределах черты города.
        В Московском регионе доставка возможна по всей Московской области.
        Заказы доставляются по рабочим дням с 10 до 18 часов.
        <br><br>
        Время, отведенное курьеру на одного покупателя - 15 минут. Пожалуйста, не задерживайте курьера.
        <br><br>
        <u>Ограничения:</u>
        <br>
        Максимальный вес заказа - до 25 кг
        ]]>
    </string>
    <string name="customer_collection_point">
        <![CDATA[
        Доставка производится через пункты выдачи заказов
        <font color=\'#C53022\'>курьерской компании СДЭК</font> во всех крупных городах России.*
        При оформлении заказа в поле адреса доставки укажите ваш город и код выбранного вами пункта выдачи заказов.
        <br><br>
        <u>Ограничения:</u>
        <br>
        Максимальный вес заказа - до 25 кг
        <br>
        ______________________________
        <br>
        * в случае невозможности доставки заказа в ваш город курьером или в ПВЗ, мы можем отправить его по почте.
        ]]>
    </string>
    <string name="delivery_by_post_office">
        <![CDATA[
        Доставка производится <font color=\'#C53022\'>почтой России</font> во все регионы.
        Обратите внимание, при оплате заказа наложенным платежом почта берет дополнительную
        комиссию за услугу перевода денег. Мы являемся федеральным партнером Почты России,
        поэтому комиссия составляет всего 2% от суммы перевода (но не менее 50 рублей).
        <br><br>
        <u>Ограничения:</u>
        <br>
        Максимальный вес заказа - 20 кг
        ]]>
    </string>
    <string name="delivery_by_transport_company">
        <![CDATA[
        Доставка производится транспортной компанией <font color=\'#C53022\'>Деловые Линии</font>
        до ближайшего к вам транспортного терминала. Услуги доставки оплачиваются напрямую транспортной
        компании по ее тарифам. Обратите внимание, при расчете стоимости доставки надо учитывать забор
        груза с <font color=\'#C53022\'>нашего склада</font> по адресу:
        <b>г. Москва, ул. Нарвская, дом 2, стр. 3 (2 этаж)</b>.
        <br><br>
        Если эта транспортная компания вам не удобна, вы можете самостоятельно организовать
        доставку заказа через любую другую транспортную или курьерскую компанию.
        <br><br>
        <u>Ограничения:</u>
        <br>
        Минимальный вес заказа - 5 кг
        <br>
        Способ оплаты - предоплата
        ]]>
    </string>
    <string name="delivery_to_other_countries">
        <![CDATA[
        Заказы в другие страны - <b>Беларусь</b> и <b>Казахстан</b>, отправляются только в города, указанные в списке.
        Доставка производится только в пункты выдачи заказов <font color=\'#C53022\'>курьерской компании СДЭК.</font>
        <br><br>
        <u>Ограничения:</u>
        <br>
        Максимальный вес заказа - до 25 кг
        <br>
        Способ оплаты - предоплата
        <br><br>
        Если доставка в ПВЗ вам не удобна, то вы можете самостоятельно организовать доставку через
        любую курьерскую или транспортную компанию. Для этого укажите город Москва, и выберите
        способ доставки самовывоз.
        ]]>
    </string>
    <string name="carry_by_yourself">
        <![CDATA[
        Отгрузка заказов весом <b>до 15 кг</b> производится из нашего
        <font color=\'#C53022\'>розничного магазина</font> по адресу:
        <b>г. Москва, ул. Балтийская, д. 5, Торговая Галерея "Москва-Сокол", магазин WORKOUT (1 этаж).</b>
        <br><br>
        Отгрузка заказов весом <b>более 15 кг</b> производится с
        <font color=\'#C53022\'>нашего склада</font> по адресу:
        <b>г. Москва, ул. Нарвская, д. 2, стр. 3 (2 этаж)</b>.
        <u>Ограничения:</u>
        <br>
        Способ оплаты - предоплата
        ]]>
    </string>
    <string name="shop_in_moscow">
        <![CDATA[
        Все товары, представленные на сайте, вы можете также приобрести в нашем
        <font color=\'#C53022\'>фирменном магазине</font>, расположенном по адресу:
        <b>г. Москва, ул. Балтийская, д. 5, Торговая Галерея "Москва-Сокол", магазин WORKOUT (1 этаж)</b>.
        Ассортимент товаров и цены в розничном магазина точно такие же, как на сайте.
        <br><br>
        В магазине все товары находятся в открытом доступе, их можно посмотреть, померить, и даже попробовать. В магазине установлен турник, где можно протестировать перчатки, лямка, крюки и другой спортивный инвентарь. Есть примерочная кабинка для примерки одежды.
        <br><br>
        При покупке товаров в фирменном магазине делать заказ на сайте <b>НЕ ТРЕБУЕТСЯ</b>.
        ]]>
    </string>
</resources>