<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Контакты"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/colorOrange"/>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contacts"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textColor="@color/colorLime"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                style="@style/contacts_left_column"
                android:id="@+id/textView2"
                android:text="@string/address"
                android:textStyle="bold" />

            <TextView
                style="@style/contacts_right_column"
                android:id="@+id/textView3"
                android:text="@string/store_hours"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                style="@style/contacts_left_column"
                android:text="@string/store1_address" />

            <TextView
                android:id="@+id/textView5"
                style="@style/contacts_right_column"
                android:text="@string/store1_hours" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                style="@style/contacts_left_column"
                android:id="@+id/textView6"
                android:text="@string/store2_address" />

            <TextView
                style="@style/contacts_right_column"
                android:id="@+id/textView7"
                android:text="@string/store2_3_5_hours" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                style="@style/contacts_left_column"
                android:id="@+id/textView8"
                android:text="@string/store3_address" />

            <TextView
                style="@style/contacts_right_column"
                android:id="@+id/textView9"
                android:text="@string/store2_3_5_hours" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                style="@style/contacts_left_column"
                android:id="@+id/textView10"
                android:text="@string/store4_address" />

            <TextView
                style="@style/contacts_right_column"
                android:id="@+id/textView11"
                android:text="@string/store4_hours" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                style="@style/contacts_left_column"
                android:id="@+id/textView12"
                android:text="@string/store5_address" />

            <TextView
                style="@style/contacts_right_column"
                android:id="@+id/textView13"
                android:text="@string/store2_3_5_hours" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>